src/plugins/parser/MADRParser.js
// Generated from MADR.g4 by ANTLR 4.9.2
// jshint ignore: start
import antlr4 from 'antlr4';
import MADRListener from './MADRListener.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class MADRParser extends antlr4.Parser {

    static grammarFileName = "MADR.g4";
    static literalNames = [ null, "'Good, because '", "'Neutral, because '", 
                            "'Bad, because '", null, null, null, null, null, 
                            "'<!-- optional -->'", null, "'# '" ];
    static symbolicNames = [ null, null, null, null, "WORD", "CHARACTER", 
                             "WS", "NEWLINE", "LIST_MARKER", "OPTIONAL_MAKER", 
                             "YAML_MARKER", "HEADING_PREFIX", "SUBSUBHEADING_PREFIX", 
                             "SUBSUBSUBHEADING_PREFIX", "CONTEXT_AND_PROBLEM_STATEMENT", 
                             "DECISION_DRIVERS_HEADING", "CONSIDERED_OPTIONS_HEADING", 
                             "DECISION_OUTCOME_HEADING", "CONSEQUENCES_HEADING", 
                             "CONFIRMATION_HEADING", "PROS_AND_CONS_OF_THE_OPTIONS_HEADING", 
                             "MORE_INFORMATION_HEADING" ];
    static ruleNames = [ "start", "yaml", "title", "contextAndProblemStatement", 
                         "decisionDrivers", "consideredOptions", "decisionOutcome", 
                         "prosAndConsOfOptions", "optionSection", "chosenOptionAndExplanation", 
                         "consequences", "confirmation", "optionTitle", 
                         "optionDescription", "argumentList", "moreInformation", 
                         "list", "textLine", "multilineText", "any", "wslb", 
                         "wslbs" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = MADRParser.ruleNames;
        this.literalNames = MADRParser.literalNames;
        this.symbolicNames = MADRParser.symbolicNames;
    }

    get atn() {
        return atn;
    }



	start() {
	    let localctx = new StartContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, MADRParser.RULE_start);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 47;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===MADRParser.YAML_MARKER) {
	            this.state = 44;
	            this.yaml();
	            this.state = 45;
	            this.wslbs();
	        }

	        this.state = 49;
	        this.match(MADRParser.HEADING_PREFIX);
	        this.state = 50;
	        this.title();
	        this.state = 51;
	        this.match(MADRParser.NEWLINE);
	        this.state = 52;
	        this.wslbs();
	        this.state = 55;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===MADRParser.CONTEXT_AND_PROBLEM_STATEMENT) {
	            this.state = 53;
	            this.match(MADRParser.CONTEXT_AND_PROBLEM_STATEMENT);
	            this.state = 54;
	            this.wslbs();
	        }

	        this.state = 61;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===MADRParser.NEWLINE) {
	            this.state = 57;
	            this.match(MADRParser.NEWLINE);
	            this.state = 58;
	            this.contextAndProblemStatement();
	            this.state = 59;
	            this.wslbs();
	        }

	        this.state = 72;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===MADRParser.DECISION_DRIVERS_HEADING) {
	            this.state = 63;
	            this.match(MADRParser.DECISION_DRIVERS_HEADING);
	            this.state = 66;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	            if(la_===1) {
	                this.state = 64;
	                this.match(MADRParser.WS);
	                this.state = 65;
	                this.match(MADRParser.OPTIONAL_MAKER);

	            }
	            this.state = 68;
	            this.wslbs();
	            this.state = 69;
	            this.decisionDrivers();
	            this.state = 70;
	            this.wslbs();
	        }

	        this.state = 79;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===MADRParser.CONSIDERED_OPTIONS_HEADING) {
	            this.state = 74;
	            this.match(MADRParser.CONSIDERED_OPTIONS_HEADING);
	            this.state = 75;
	            this.wslbs();
	            this.state = 76;
	            this.consideredOptions();
	            this.state = 77;
	            this.wslbs();
	        }

	        this.state = 86;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===MADRParser.DECISION_OUTCOME_HEADING) {
	            this.state = 81;
	            this.match(MADRParser.DECISION_OUTCOME_HEADING);
	            this.state = 82;
	            this.wslbs();
	            this.state = 83;
	            this.decisionOutcome();
	            this.state = 84;
	            this.wslbs();
	        }

	        this.state = 97;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===MADRParser.PROS_AND_CONS_OF_THE_OPTIONS_HEADING) {
	            this.state = 88;
	            this.match(MADRParser.PROS_AND_CONS_OF_THE_OPTIONS_HEADING);
	            this.state = 91;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
	            if(la_===1) {
	                this.state = 89;
	                this.match(MADRParser.WS);
	                this.state = 90;
	                this.match(MADRParser.OPTIONAL_MAKER);

	            }
	            this.state = 93;
	            this.wslbs();
	            this.state = 94;
	            this.prosAndConsOfOptions();
	            this.state = 95;
	            this.wslbs();
	        }

	        this.state = 108;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===MADRParser.MORE_INFORMATION_HEADING) {
	            this.state = 99;
	            this.match(MADRParser.MORE_INFORMATION_HEADING);
	            this.state = 102;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
	            if(la_===1) {
	                this.state = 100;
	                this.match(MADRParser.WS);
	                this.state = 101;
	                this.match(MADRParser.OPTIONAL_MAKER);

	            }
	            this.state = 104;
	            this.wslbs();
	            this.state = 105;
	            this.moreInformation();
	            this.state = 106;
	            this.wslbs();
	        }

	        this.state = 110;
	        this.match(MADRParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	yaml() {
	    let localctx = new YamlContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, MADRParser.RULE_yaml);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 112;
	        this.match(MADRParser.YAML_MARKER);
	        this.state = 113;
	        this.multilineText();
	        this.state = 114;
	        this.match(MADRParser.YAML_MARKER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	title() {
	    let localctx = new TitleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, MADRParser.RULE_title);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 116;
	        this.textLine();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	contextAndProblemStatement() {
	    let localctx = new ContextAndProblemStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, MADRParser.RULE_contextAndProblemStatement);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 118;
	        this.multilineText();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	decisionDrivers() {
	    let localctx = new DecisionDriversContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, MADRParser.RULE_decisionDrivers);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 120;
	        this.list();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	consideredOptions() {
	    let localctx = new ConsideredOptionsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, MADRParser.RULE_consideredOptions);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 122;
	        this.list();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	decisionOutcome() {
	    let localctx = new DecisionOutcomeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, MADRParser.RULE_decisionOutcome);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 124;
	        this.wslbs();
	        this.state = 125;
	        this.chosenOptionAndExplanation();
	        this.state = 134;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,12,this._ctx);
	        if(la_===1) {
	            this.state = 126;
	            this.wslbs();
	            this.state = 127;
	            this.match(MADRParser.CONSEQUENCES_HEADING);
	            this.state = 130;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	            if(la_===1) {
	                this.state = 128;
	                this.match(MADRParser.WS);
	                this.state = 129;
	                this.match(MADRParser.OPTIONAL_MAKER);

	            }
	            this.state = 132;
	            this.consequences();

	        }
	        this.state = 144;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,14,this._ctx);
	        if(la_===1) {
	            this.state = 136;
	            this.wslbs();
	            this.state = 137;
	            this.match(MADRParser.CONFIRMATION_HEADING);
	            this.state = 140;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,13,this._ctx);
	            if(la_===1) {
	                this.state = 138;
	                this.match(MADRParser.WS);
	                this.state = 139;
	                this.match(MADRParser.OPTIONAL_MAKER);

	            }
	            this.state = 142;
	            this.confirmation();

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	prosAndConsOfOptions() {
	    let localctx = new ProsAndConsOfOptionsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, MADRParser.RULE_prosAndConsOfOptions);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 149; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 146;
	            this.optionSection();
	            this.state = 147;
	            this.wslbs();
	            this.state = 151; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===MADRParser.SUBSUBHEADING_PREFIX);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	optionSection() {
	    let localctx = new OptionSectionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, MADRParser.RULE_optionSection);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 153;
	        this.match(MADRParser.SUBSUBHEADING_PREFIX);
	        this.state = 154;
	        this.optionTitle();
	        this.state = 155;
	        this.match(MADRParser.NEWLINE);
	        this.state = 159;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,16,this._ctx);
	        if(la_===1) {
	            this.state = 156;
	            this.wslbs();
	            this.state = 157;
	            this.optionDescription();

	        }
	        this.state = 164;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,17,this._ctx);
	        if(la_===1) {
	            this.state = 161;
	            this.wslbs();
	            this.state = 162;
	            this.argumentList();

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	chosenOptionAndExplanation() {
	    let localctx = new ChosenOptionAndExplanationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, MADRParser.RULE_chosenOptionAndExplanation);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 166;
	        this.multilineText();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	consequences() {
	    let localctx = new ConsequencesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, MADRParser.RULE_consequences);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 168;
	        this.list();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	confirmation() {
	    let localctx = new ConfirmationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, MADRParser.RULE_confirmation);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 170;
	        this.multilineText();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	optionTitle() {
	    let localctx = new OptionTitleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, MADRParser.RULE_optionTitle);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 172;
	        this.textLine();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	optionDescription() {
	    let localctx = new OptionDescriptionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, MADRParser.RULE_optionDescription);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 174;
	        this.multilineText();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argumentList() {
	    let localctx = new ArgumentListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, MADRParser.RULE_argumentList);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 181; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 176;
	        		this.wslbs();
	        		this.state = 177;
	        		this.match(MADRParser.LIST_MARKER);
	        		this.state = 178;
	        		_la = this._input.LA(1);
	        		if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << MADRParser.T__0) | (1 << MADRParser.T__1) | (1 << MADRParser.T__2))) !== 0))) {
	        		this._errHandler.recoverInline(this);
	        		}
	        		else {
	        			this._errHandler.reportMatch(this);
	        		    this.consume();
	        		}
	        		this.state = 179;
	        		this.textLine();
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 183; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,18, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	moreInformation() {
	    let localctx = new MoreInformationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, MADRParser.RULE_moreInformation);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 185;
	        this.multilineText();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	list() {
	    let localctx = new ListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, MADRParser.RULE_list);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 192; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 187;
	        		this.wslbs();
	        		this.state = 188;
	        		this.match(MADRParser.LIST_MARKER);
	        		this.state = 190;
	        		this._errHandler.sync(this);
	        		var la_ = this._interp.adaptivePredict(this._input,19,this._ctx);
	        		if(la_===1) {
	        		    this.state = 189;
	        		    this.textLine();

	        		}
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 194; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,20, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	textLine() {
	    let localctx = new TextLineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, MADRParser.RULE_textLine);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 198; 
	        this._errHandler.sync(this);
	        var _alt = 1+1;
	        do {
	        	switch (_alt) {
	        	case 1+1:
	        		this.state = 198;
	        		this._errHandler.sync(this);
	        		switch(this._input.LA(1)) {
	        		case MADRParser.WORD:
	        		case MADRParser.CHARACTER:
	        		case MADRParser.LIST_MARKER:
	        		case MADRParser.YAML_MARKER:
	        		case MADRParser.HEADING_PREFIX:
	        		case MADRParser.SUBSUBSUBHEADING_PREFIX:
	        		    this.state = 196;
	        		    this.any();
	        		    break;
	        		case MADRParser.WS:
	        		    this.state = 197;
	        		    this.match(MADRParser.WS);
	        		    break;
	        		default:
	        		    throw new antlr4.error.NoViableAltException(this);
	        		}
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 200; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,22, this._ctx);
	        } while ( _alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	multilineText() {
	    let localctx = new MultilineTextContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, MADRParser.RULE_multilineText);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 204; 
	        this._errHandler.sync(this);
	        var _alt = 1+1;
	        do {
	        	switch (_alt) {
	        	case 1+1:
	        		this.state = 204;
	        		this._errHandler.sync(this);
	        		switch(this._input.LA(1)) {
	        		case MADRParser.WORD:
	        		case MADRParser.CHARACTER:
	        		case MADRParser.LIST_MARKER:
	        		case MADRParser.YAML_MARKER:
	        		case MADRParser.HEADING_PREFIX:
	        		case MADRParser.SUBSUBSUBHEADING_PREFIX:
	        		    this.state = 202;
	        		    this.any();
	        		    break;
	        		case MADRParser.WS:
	        		case MADRParser.NEWLINE:
	        		    this.state = 203;
	        		    this.wslb();
	        		    break;
	        		default:
	        		    throw new antlr4.error.NoViableAltException(this);
	        		}
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 206; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,24, this._ctx);
	        } while ( _alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	any() {
	    let localctx = new AnyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, MADRParser.RULE_any);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 208;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << MADRParser.WORD) | (1 << MADRParser.CHARACTER) | (1 << MADRParser.LIST_MARKER) | (1 << MADRParser.YAML_MARKER) | (1 << MADRParser.HEADING_PREFIX) | (1 << MADRParser.SUBSUBSUBHEADING_PREFIX))) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	wslb() {
	    let localctx = new WslbContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, MADRParser.RULE_wslb);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 210;
	        _la = this._input.LA(1);
	        if(!(_la===MADRParser.WS || _la===MADRParser.NEWLINE)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	wslbs() {
	    let localctx = new WslbsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, MADRParser.RULE_wslbs);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 215;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,25,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 212;
	                this.wslb(); 
	            }
	            this.state = 217;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,25,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

MADRParser.EOF = antlr4.Token.EOF;
MADRParser.T__0 = 1;
MADRParser.T__1 = 2;
MADRParser.T__2 = 3;
MADRParser.WORD = 4;
MADRParser.CHARACTER = 5;
MADRParser.WS = 6;
MADRParser.NEWLINE = 7;
MADRParser.LIST_MARKER = 8;
MADRParser.OPTIONAL_MAKER = 9;
MADRParser.YAML_MARKER = 10;
MADRParser.HEADING_PREFIX = 11;
MADRParser.SUBSUBHEADING_PREFIX = 12;
MADRParser.SUBSUBSUBHEADING_PREFIX = 13;
MADRParser.CONTEXT_AND_PROBLEM_STATEMENT = 14;
MADRParser.DECISION_DRIVERS_HEADING = 15;
MADRParser.CONSIDERED_OPTIONS_HEADING = 16;
MADRParser.DECISION_OUTCOME_HEADING = 17;
MADRParser.CONSEQUENCES_HEADING = 18;
MADRParser.CONFIRMATION_HEADING = 19;
MADRParser.PROS_AND_CONS_OF_THE_OPTIONS_HEADING = 20;
MADRParser.MORE_INFORMATION_HEADING = 21;

MADRParser.RULE_start = 0;
MADRParser.RULE_yaml = 1;
MADRParser.RULE_title = 2;
MADRParser.RULE_contextAndProblemStatement = 3;
MADRParser.RULE_decisionDrivers = 4;
MADRParser.RULE_consideredOptions = 5;
MADRParser.RULE_decisionOutcome = 6;
MADRParser.RULE_prosAndConsOfOptions = 7;
MADRParser.RULE_optionSection = 8;
MADRParser.RULE_chosenOptionAndExplanation = 9;
MADRParser.RULE_consequences = 10;
MADRParser.RULE_confirmation = 11;
MADRParser.RULE_optionTitle = 12;
MADRParser.RULE_optionDescription = 13;
MADRParser.RULE_argumentList = 14;
MADRParser.RULE_moreInformation = 15;
MADRParser.RULE_list = 16;
MADRParser.RULE_textLine = 17;
MADRParser.RULE_multilineText = 18;
MADRParser.RULE_any = 19;
MADRParser.RULE_wslb = 20;
MADRParser.RULE_wslbs = 21;

class StartContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = MADRParser.RULE_start;
    }

	HEADING_PREFIX() {
	    return this.getToken(MADRParser.HEADING_PREFIX, 0);
	};

	title() {
	    return this.getTypedRuleContext(TitleContext,0);
	};
